add role and login services
